--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.4.6</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.4.7</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -391,7 +391,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.4.6 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.4.7 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -1606,66 +1606,56 @@ function hitungPosisiSaldo() {
     let totalATM = 0;
     let totalTunai = 0;
 
-    // Fungsi pembersih angka (Rp 50.000 -> 50000)
-    const bersihkan = (txt) => parseInt(txt.replace(/\D/g, "")) || 0;
+    // Helper ambil angka murni
+    const getDuit = (el) => parseInt(el.innerText.replace(/\D/g, "")) || 0;
 
-    // 1. Scan Pemasukan (Keterangan index 2, Uang Masuk index 3)
+    // 1. Scan Pemasukan (ID: tbMasuk)
+    // Index 2 = Keterangan, Index 3 = Uang Masuk
     document.querySelectorAll("#tbMasuk tr").forEach(row => {
         if (row.cells.length >= 4) {
-            let ket = row.cells[2].innerText.toUpperCase();
-            let nominal = bersihkan(row.cells[3].innerText);
-            if (nominal > 0) { // Hanya hitung jika ada angkanya
-                if (ket.includes("TRANSFER")) totalATM += nominal;
-                if (ket.includes("TUNAI")) totalTunai += nominal;
-            }
+            let ket = row.cells[2].innerText.trim().toUpperCase();
+            let nominal = getDuit(row.cells[3]);
+            if (ket.includes("TRANSFER")) totalATM += nominal;
+            if (ket.includes("TUNAI")) totalTunai += nominal;
         }
     });
 
-    // 2. Scan Pengeluaran (Keterangan index 1, Total index 4)
+    // 2. Scan Pengeluaran (ID: tbKeluar)
+    // Index 1 = Keterangan, Index 4 = Total
     document.querySelectorAll("#tbKeluar tr").forEach(row => {
         if (row.cells.length >= 5) {
-            let ket = row.cells[1].innerText.toUpperCase();
-            let nominal = bersihkan(row.cells[4].innerText);
-            if (nominal > 0) {
-                if (ket.includes("TRANSFER")) totalATM -= nominal;
-                if (ket.includes("TUNAI")) totalTunai -= nominal;
-            }
+            let ket = row.cells[1].innerText.trim().toUpperCase();
+            let nominal = getDuit(row.cells[4]);
+            if (ket.includes("TRANSFER")) totalATM -= nominal;
+            if (ket.includes("TUNAI")) totalTunai -= nominal;
         }
     });
 
-    // 3. Scan Target Patungan (Keterangan index 2, Uang Masuk index 3)
+    // 3. Scan Target Patungan (ID: tbTargetPatungan)
+    // Index 2 = Keterangan, Index 3 = Uang Masuk
     document.querySelectorAll("#tbTargetPatungan tr").forEach(row => {
         if (row.cells.length >= 4) {
-            let ket = row.cells[2].innerText.toUpperCase();
-            let nominal = bersihkan(row.cells[3].innerText);
-            if (nominal > 0) {
-                if (ket.includes("TRANSFER")) totalATM += nominal;
-                if (ket.includes("TUNAI")) totalTunai += nominal;
-            }
+            let ket = row.cells[2].innerText.trim().toUpperCase();
+            let nominal = getDuit(row.cells[3]);
+            if (ket.includes("TRANSFER")) totalATM += nominal;
+            if (ket.includes("TUNAI")) totalTunai += nominal;
         }
     });
 
-    // Update ke layar
+    // TAMPILKAN
     document.getElementById("saldoATM").innerText = "Rp " + totalATM.toLocaleString("id-ID");
     document.getElementById("saldoTunai").innerText = "Rp " + totalTunai.toLocaleString("id-ID");
     
-    console.log("Saldo Terupdate: ATM=" + totalATM + ", Tunai=" + totalTunai);
+    console.log("CEK HASIL: ATM = " + totalATM + " | Tunai = " + totalTunai);
 }
 
-// JALANKAN OTOMATIS (Retry tiap 2 detik sampai data Firebase muncul)
-let stopInterval = setInterval(() => {
+// PAKSA JALAN TIAP 3 DETIK (Biar nunggu Firebase render sempurna)
+const sapuJagat = setInterval(() => {
     hitungPosisiSaldo();
-    let atm = document.getElementById("saldoATM").innerText;
-    if (atm !== "Rp 0") clearInterval(stopInterval); // Berhenti jika sudah ada data
-}, 2000);
-
-// Pengintai tetap aktif jika ada input baru
-const obsSaldo = new MutationObserver(() => hitungPosisiSaldo());
-setTimeout(() => {
-    ['tbMasuk', 'tbKeluar', 'tbTargetPatungan'].forEach(id => {
-        let el = document.getElementById(id);
-        if(el) obsSaldo.observe(el, { childList: true, subtree: true });
-    });
+    // Kalau angka udah muncul, pelanin intervalnya jadi per 10 detik atau stop
+    if(document.getElementById("saldoATM").innerText !== "Rp 0") {
+        console.log("DATA DITEMUKAN!");
+    }
 }, 3000);
 
 </script>
@@ -1689,6 +1679,7 @@ setTimeout(() => {
 </div>
 </body>
 </html>
+
 
 
 
