--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.4.9</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.5.0</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -391,7 +391,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.4.9 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.5.0 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -1606,67 +1606,56 @@ function hitungPosisiSaldo() {
     let totalATM = 0;
     let totalTunai = 0;
 
-    // Fungsi ambil angka yang lebih galak
-    const ambilAngkaMurni = (el) => {
+    // Fungsi paling galak: Ambil semua teks, termasuk yang di dalem textarea/input
+    const ambilSemuaTeks = (row) => {
+        let teksLuaran = row.innerText || "";
+        let teksInput = Array.from(row.querySelectorAll('textarea, input')).map(el => el.value).join(" ");
+        return (teksLuaran + " " + teksInput).toUpperCase();
+    };
+
+    const ambilDuit = (el) => {
         if (!el) return 0;
-        let n = el.innerText.replace(/[^0-9]/g, ""); // Hanya ambil angka 0-9
+        let n = el.innerText.replace(/[^0-9]/g, "");
         return parseInt(n) || 0;
     };
 
     // 1. SCAN PEMASUKAN
-    document.querySelectorAll("#tbMasuk tr").forEach((row, i) => {
+    document.querySelectorAll("#tbMasuk tr").forEach(row => {
         if (row.cells.length >= 4) {
-            let tArea = row.cells[2].querySelector("textarea");
-            let teks = tArea ? tArea.value.toUpperCase() : row.cells[2].innerText.toUpperCase();
-            let duit = ambilAngkaMurni(row.cells[3]);
-
-            if (teks.includes("TRANSFER")) {
-                totalATM += duit;
-            } else if (teks.includes("TUNAI")) {
-                totalTunai += duit;
-            }
+            let gabunganTeks = ambilSemuaTeks(row);
+            let nominal = ambilDuit(row.cells[3]);
+            if (gabunganTeks.includes("TRANSFER")) totalATM += nominal;
+            if (gabunganTeks.includes("TUNAI")) totalTunai += nominal;
         }
     });
 
     // 2. SCAN PENGELUARAN
-    document.querySelectorAll("#tbKeluar tr").forEach((row) => {
+    document.querySelectorAll("#tbKeluar tr").forEach(row => {
         if (row.cells.length >= 5) {
-            let tArea = row.cells[1].querySelector("textarea");
-            let teks = tArea ? tArea.value.toUpperCase() : row.cells[1].innerText.toUpperCase();
-            let duit = ambilAngkaMurni(row.cells[4]);
-
-            if (teks.includes("TRANSFER")) {
-                totalATM -= duit;
-            } else if (teks.includes("TUNAI")) {
-                totalTunai -= duit;
-            }
+            let gabunganTeks = ambilSemuaTeks(row);
+            let nominal = ambilDuit(row.cells[4]);
+            if (gabunganTeks.includes("TRANSFER")) totalATM -= nominal;
+            if (gabunganTeks.includes("TUNAI")) totalTunai -= nominal;
         }
     });
 
-    // 3. SCAN TARGET PATUNGAN
-    document.querySelectorAll("#tbTargetPatungan tr").forEach((row) => {
+    // 3. SCAN PATUNGAN
+    document.querySelectorAll("#tbTargetPatungan tr").forEach(row => {
         if (row.cells.length >= 4) {
-            let tArea = row.cells[2].querySelector("textarea");
-            let teks = tArea ? tArea.value.toUpperCase() : row.cells[2].innerText.toUpperCase();
-            let duit = ambilAngkaMurni(row.cells[3]);
-
-            if (teks.includes("TRANSFER")) {
-                totalATM += duit;
-            } else if (teks.includes("TUNAI")) {
-                totalTunai += duit;
-            }
+            let gabunganTeks = ambilSemuaTeks(row);
+            let nominal = ambilDuit(row.cells[3]);
+            if (gabunganTeks.includes("TRANSFER")) totalATM += nominal;
+            if (gabunganTeks.includes("TUNAI")) totalTunai += nominal;
         }
     });
 
-    // Update ke layar
     document.getElementById("saldoATM").innerText = "Rp " + totalATM.toLocaleString("id-ID");
     document.getElementById("saldoTunai").innerText = "Rp " + totalTunai.toLocaleString("id-ID");
     
-    // Log biar lu bisa maki gua kalo 0
-    console.log("DEBUG SALDO -> ATM: " + totalATM + " | TUNAI: " + totalTunai);
+    console.log("DEBUG TERAKHIR -> ATM: " + totalATM + " | TUNAI: " + totalTunai);
 }
 
-// JANGAN PAKE INTERVAL 2 DETIK TERUS-TERUSAN, PAKE INI BIAR CLING:
+// Jalankan tiap 2 detik
 setInterval(hitungPosisiSaldo, 2000);
 
 </script>
@@ -1690,6 +1679,7 @@ setInterval(hitungPosisiSaldo, 2000);
 </div>
 </body>
 </html>
+
 
 
 
