--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.6.6</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V3.6.7</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -363,7 +363,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <h2>GRAND TOTAL</h2>
 <div class="pulse-line"></div>
 <table class="grand-total-table">
-<tr><th>TOTAL UANG MASUK</th><th>TOTAL UANG KELUAR</th><th>SALDO AKHIR</th></tr>
+<tr><th>TOTAL UANG KAS MASUK</th><th>TOTAL UANG KAS KELUAR</th><th>SALDO AKHIR KAS</th></tr>
 <tr><td id="totalMasuk">0</td><td id="totalKeluar">0</td><td id="saldoAkhir" class="saldo-akhir">0</td></tr>
 </table>
 </div>
@@ -380,14 +380,14 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
         
         <div style="flex: 1; background: #f0f7ff; padding: 15px; border-radius: 10px; border: 1px solid #cce3ff; min-width: 200px; box-shadow: 2px 2px 5px rgba(0,0,0,0.03); display: flex; flex-direction: column; align-items: center;">
             <small style="color: #0056b3; font-weight: 800; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.5px;">
-                🔵 Saldo ATM (Termasuk uang patungan)
+                🔵 Saldo ATM
             </small>
             <div id="saldoATM" style="font-size: 1.4rem; font-weight: 800; color: #004085; margin-top: 5px;">Rp 0</div>
         </div>
 
         <div style="flex: 1; background: #fff9f0; padding: 15px; border-radius: 10px; border: 1px solid #ffe8cc; min-width: 200px; box-shadow: 2px 2px 5px rgba(0,0,0,0.03); display: flex; flex-direction: column; align-items: center;">
             <small style="color: #995a00; font-weight: 800; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.5px;">
-                🟠 Saldo Tunai (Termasuk uang patungan)
+                🟠 Saldo Tunai
             </small>
             <div id="saldoTunai" style="font-size: 1.4rem; font-weight: 800; color: #854d00; margin-top: 5px;">Rp 0</div>
         </div>
@@ -407,7 +407,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.6.6 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V3.6.7 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -1723,6 +1723,7 @@ function hitungPosisiSaldo() {
 </div>
 </body>
 </html>
+
 
 
 
